task_3/k8s_task3_minio_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingresssvc3
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio-app-svc
            port:
              number: 9001
      - path: /web
        pathType: Prefix
        backend:
          service:
            name: nginx-app-svc
            port:
              number: 80
